More progress on sequential design section.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -117,8 +117,12 @@
 \newcommand{\intentLabel}{\text{int-ent}}
 \newcommand{\maxexpvarLabel}{\text{max-exp-var}}
 \newcommand{\maxexpentLabel}{\text{max-exp-ent}}
+\newcommand{\intExpVarLabel}{\text{int-exp-var}}
+\newcommand{\fwdintExpVarLabel}{\fwd \text{,}\intExpVarLabel}
+\newcommand{\intExpEntLabel}{\text{int-exp-ent}}
 \newcommand{\Ent}{H} % Entropy 
 \newcommand{\weightDens}{\rho}
+\newcommand{\varInflation}{v}
 
 % Basis function emulation. 
 \newcommand{\basisVec}{\phi}
