Progress on sequential design draft.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -105,6 +105,7 @@
 \newcommand{\designOutFwd}[1][\Ndesign]{g_{#1}}
 \newcommand{\designBatchIn}{U_{\Nbatch}}
 \newcommand{\designBatchLlik}{\ell_{\Nbatch}}
+\newcommand{\designBatchFunc}{\varphi_{\Nbatch}}
 \newcommand{\designBatchFwd}{g_{\Nbatch}}
 \newcommand{\acq}[1][\Ndesign]{\mathcal{A}_{#1}}
 \newcommand{\design}[1][\Ndesign]{\mathcal{D}_{#1}}
