--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -724,7 +724,7 @@ not an issue for any of the above acquisitions given that $\gpKer[\Naugment](\Pa
 (see \ref{kriging_eqns}). However, the predictive mean $\gpMean[\Naugment](\Par)$ does depend on $\func(\designBatchIn)$, 
 a fact which will become relevant in the subsequent section. We therefore state a lemma below which summarizes the 
 dependence of the predictive mean on $\func(\designBatchIn)$, under the assumption that the latter is distributed according 
-to the current GP $\funcEm[\Ndesign]$. This result is also provided in \cite{VehtariParallelGP}. 
+to the current GP $\funcEm[\Ndesign]$. A similar result is also provided in \cite{VehtariParallelGP}. 
 \begin{lemma} \label{lemma:pred-mean-dist}
 Let $(\designBatchIn, \designBatchFunc)$ be a new batch of $\Nbatch$ design points, with 
 $\designBatchFunc \sim \Gaussian(\gpMean[\Ndesign](\designBatchIn), \gpKer[\Ndesign](\designBatchIn))$. 
@@ -738,21 +738,21 @@ $(\designBatchIn, \designBatchFunc)$. Then, the predictive mean $\gpMean[\Naugme
 (viewed as a function of the random variable $\designBatchFunc$), satisfies 
 \begin{align}
 \gpMean[\Naugment](\parMat | \designBatchFunc)
-\sim \Gaussian\left(\gpMean[\Naugment](\parMat | \gpMean[\Ndesign](\designBatchIn)), 
+\sim \Gaussian\left(\gpMean[\Ndesign](\parMat), 
                                \gpKer[\Ndesign](\parMat) - \gpKer[\Naugment](\parMat) \right) \label{pred-mean-dist},
 \end{align}
 \end{lemma}
-We see that the mean (with respect to $\designBatchFunc$) of $\gpMean[\Naugment](\parMat | \designBatchFunc)$ is equal to the mean of
-the conditional 
-$\funcEm[\Ndesign](\parMat) | (\designBatchIn, \gpMean[\Ndesign](\designBatchIn))$, which treats the current 
-predictive mean $\gpMean[\Ndesign](\designBatchIn)$ as if it were the true response; i.e., the GP $\funcEm[\Ndesign]$
-has been conditioned on the ``pseudo-data'' $(\designBatchIn, \gpMean[\Ndesign](\designBatchIn))$. 
-The variance of 
+We see that the expectation (with respect to $\designBatchFunc$) of $\gpMean[\Naugment](\parMat | \designBatchFunc)$ 
+is equal to the current predictive mean $\gpMean[\Ndesign](\parMat)$. Since 
+$\gpMean[\Ndesign](\parMat) = \gpMean[\Naugment](\parMat | \gpMean[\Ndesign](\designBatchIn))$, this can also be 
+interpreted as the predictive mean resulting from the conditioning of $\funcEm[\Ndesign]$ on the ``pseudo-data''
+$(\designBatchIn, \gpMean[\Ndesign](\designBatchIn))$; i.e., treating the current GP predictive mean as if it were 
+the true response. The variance of 
 $\gpMean[\Naugment](\parMat | \designBatchFunc)$ is equal to the change in GP variance at the inputs $\parMat$ due to the act 
 of conditioning on the batch $\designBatchIn$. Therefore, the uncertainty in $\gpMean[\Naugment](\parMat | \designBatchFunc)$ 
 is large when the design points $\designBatchIn$ are more ``influential.''
 
-\subsection{Goal-Oriented Acquisition Functions: Posterior Approximation}
+\subsection{Acquisition Functions for Posterior Approximation}
 The previous section introduced several acquisition functions that seek to improve GP predictions by targeting
 design point batches that cause large reductions of uncertainty in the GP predictive distribution. While such criteria may be appropriate 
 when good predictions are required across all of $\parSpace$, this may not align well with the goal of constructing a GP emulator 
@@ -769,26 +769,27 @@ forward models of significant computational expense, such as those that motivate
 We instead focus on design methods that fit within the sequential design framework summarized in \Cref{alg:seq_des_loop}, and 
 are tailored to the goal of posterior approximation. The main idea is to define acquisition functions based on 
 the unnormalized posterior density emulator ($\fwdEmRdm[\Ndesign]{\postDens}(\Par)$ or $\llikEmRdmDens[\Ndesign](\Par)$), 
-rather than the underlying GPs themselves. The problem of GP-based sequential design tailored to posterior approximation 
+rather than the underlying GPs themselves. The problem of GP-based sequential design for Bayesian inverse problems  
 has gained recent attention, and is addressed in 
 \cite{SinsbeckNowak, Surer2023sequential, VehtariParallelGP, briol2017sampling, ranjan2016inverse, 
 	landslideCalibration, KandasamyActiveLearning2015, Kandasamy_2017, wang2018adaptive,   
 	weightedIVAR, quantileApprox, hydrologicalModel, briol2017sampling}. 
 [\todo: need to look at the method used in \cite{quantileApprox, hydrologicalModel} more closely.]
-As an initial example, we consider tailoring the $\maxvarLabel$ and $\maxentLabel$ to the posterior approximation goal in 
-the log-likelihood emulation setting. Their natural analogs in this setting are 
+As an initial example, we consider tailoring the $\maxvarLabel$ and $\maxentLabel$ criteria to the task of posterior approximation 
+using a log-likelihood emulator. The natural analogs of these acquisition functions in this setting are 
 \begin{align}
 &\labelAcq[\Ndesign]{\maxexpvarLabel}(\Par) \Def -\Var[\llikEmRdmDens[\Ndesign](\Par)] , 
-&&\labelAcq[\Ndesign]{\maxexpentLabel}(\Par) \Def -\Ent[\llikEmRdmDens[\Ndesign](\Par)]. \label{acq_max_exp_var_ent}
+&&\labelAcq[\Ndesign]{\maxexpentLabel}(\designBatchIn) \Def -\Ent[\llikEmRdmDens[\Ndesign](\designBatchIn)]. \label{acq_max_exp_var_ent}
 \end{align} 
-The ``exp'' in the naming convention highlights that these criteria are being applied to the exponentiated GP 
-$\Exp{\llikEm(\Par)}$ (ignoring the scaling by the prior). Thus, many of the acquisition functions considered here can be 
-generically viewed as the analogs of existing GP acquisition functions for log-normal processes (LNPs). Since the 
+The ``exp'' in the naming convention highlights that these criteria are being applied to
+$\llikEmRdmDens[\Ndesign](\Par) = \priorDens(\Par) \Exp{\llikEm(\Par)}$, which is an exponentiated GP. 
+Thus, many of the acquisition functions 
+considered here can be viewed as the analogs of existing GP acquisition functions instead applied to log-normal 
+processes (LNP). Since the 
 variance and entropy of a log-normal random variable are well-known, the acquisitions \ref{acq_max_exp_var_ent}
 are easily computable in closed-form. The $\maxexpvarLabel$ acquisition is considered in 
-\cite{, KandasamyActiveLearning2015, Kandasamy_2017}, 
+\cite{KandasamyActiveLearning2015, Kandasamy_2017}, 
 while $\maxexpentLabel$ is utilized in \cite{wang2018adaptive, landslideCalibration}. 
-[\todo: discuss generalization to batch setting]. 
 
 \subsubsection{Expected Integrated Variance}
 We now focus on adapting the integrated variance criterion \ref{acq_int_var} to LNPs. 
@@ -801,18 +802,18 @@ integrand.
 We begin with the log-likelihood emulation case. Recall that the 
 $\intvarLabel$ criterion relied on the GP property that the predictive variance $\emKer[\Naugment]{\llik}(\Par)$
 does not depend on the response $\llik(\designBatchIn)$. This is no longer the case for 
-$\Var[\llikEmRdmDens[\Naugment](\Par)]$, given that this quantity depends on $\emMean[\Naugment]{\llik}(\Par)$, 
+$\Var[\llikEmRdmDens[\Naugment](\Par)]$, given that $\llikEmRdmDens[\Naugment](\Par)$ is a log-normal 
+random variable and hence its variance depends on $\emMean[\Naugment]{\llik}(\Par)$,  
 which in turn depends on $\llik(\designBatchIn)$ (see \ref{kriging_eqns}). 
 However, under the current GP model we have that 
 $\llik(\designBatchIn) \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$.
-The dependence of $\emMean[\Naugment]{\llik}(\Par)$ on $\llik(\designBatchIn)$ is summarized in the below 
-result, which is also given in \cite{VehtariParallelGP}.
-The above lemma allows us to 
-average over the uncertainty in $\Var[\llikEmRdmDens[\Naugment](\Par)]$ stemming from the random 
-quantity $\designBatchLlik$. 
-
+The dependence of $\emMean[\Naugment]{\llik}(\Par)$ on $\llik(\designBatchIn)$ is given in 
+\Cref{lemma:pred-mean-dist}. This lemma allows us to average over the uncertainty in  
+$\Var[\llikEmRdmDens[\Naugment](\Par)]$ stemming from the random quantity $\llik(\designBatchIn)$. 
 \begin{lemma} \label{lemma:evar}
-Under the same assumptions as \Cref{lemma:pred-mean-dist}, it follows that 
+Let $(\designBatchIn, \designBatchLlik)$ be a new batch of $\Nbatch$ design points, with 
+$\designBatchLlik \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$. 
+For an arbitrary $\Par \in \parSpace$, it then follows that 
 \begin{align}
 \E_{\designBatchLlik} \Var[\llikEmRdmDens[\Naugment](\Par)]
 &= \Var[\llikEmRdmDens[\Ndesign](\Par) | \emMean[\Ndesign]{\llik}(\designBatchIn)]
@@ -821,9 +822,10 @@ Under the same assumptions as \Cref{lemma:pred-mean-dist}, it follows that
 where 
 \begin{align}
 \varInflation(\Par; \designBatchIn)
-&= \Exp{2\left(\emKer[\Ndesign]{\llik}(\parMat) - \emKer[\Naugment]{\llik}(\parMat)\right)}. \label{var_inflation_factor}
+&= \Exp{2\left(\emKer[\Ndesign]{\llik}(\Par) - \emKer[\Naugment]{\llik}(\Par)\right)}. \label{var_inflation_factor}
 \end{align}
 \end{lemma}
+A similar result is derived in \cite{VehtariParallelGP}.
 The interpretation of \Cref{lemma:evar} is similar to that for \Cref{lemma:pred-mean-dist}. 
 The first term in \ref{evar-expression} is the variance of the log-normal random variable
  $\llikEmRdmDens[\Ndesign](\Par)$ conditioned on the ``pseudo-data''
